# opengl-animations

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Quad/: CMakeLists.txt  quad.cpp
TriangleLines/: CMakeLists.txt  GLUtils.cpp  triangleLines.cpp
TrianglePoints/: CMakeLists.txt  trianglePoints.cpp
include/: GLUtils.h  glad.c
include/glad/: glad.h
libs/: libGL.so.1.2.0  libfreetype.so.6.18.3  libglfw.so.3.3
misc/: textRenderer.cpp  textRenderer.h  utils.cpp  utils.h
shared/: CMakeLists.txt  GlfwWindowUtils.cpp  GlfwWindowUtils.h
